Fixed neo4j queries Added neo4j analytics Connecting neo4j repository to services (not concluded)